--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,30 +1,34 @@
+# my global config
 global:
-  scrape_interval:     15s
-  evaluation_interval: 15s
+  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
 
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+      - alertmanager:9093
+
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+rule_files:
+  - "/etc/prometheus/alert.yml"
+#   - "second_rules.yml"
+
+# A scrape configuration containing exactly one endpoint to scrape:
 scrape_configs:
+# Here it's Prometheus itself.
+# The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-    scrape_interval: 10s
-    static_configs:
-      - targets: ['localhost:9090']
-
-  - job_name: 'other-services_metrics'
-    scrape_interval: 10s
-    static_configs:
-      - targets: ['']
-
-  - job_name: 'node_exporter'
-  # it reads the targets from docker dns
-    dns_sd_configs:
-    - names:
-      - 'tasks.node-exporter'
-      type: 'A'
-      port: 9100
-
-  - job_name: 'cadvisor'
-    scrape_interval: 5s
-    dns_sd_configs:
-    - names:
-      - 'tasks.cadvisor'
-      type: 'A'
-      port: 8080
+    params:
+      'match[]':
+        - '{job="prometheus"}'
+        - '{__name__=~".+"}'
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+    metrics_path: '/federate'
+    honor_labels: true
+    file_sd_configs:
+    - files:
+      - 'targets.json'
