--- a/prometheus.yml
+++ b/prometheus.yml
@@ -32,3 +32,24 @@ scrape_configs:
     file_sd_configs:
     - files:
       - 'targets.json'
+
+  - job_name: 'other-services_metrics'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['']
+
+  - job_name: 'node_exporter'
+  # it reads the targets from docker dns
+    dns_sd_configs:
+    - names:
+      - 'tasks.node-exporter'
+      type: 'A'
+      port: 9100
+
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    dns_sd_configs:
+    - names:
+      - 'tasks.cadvisor'
+      type: 'A'
+      port: 8080
