--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,10 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention.time=2d'
+#        - '--web.console.libraries=/etc/prometheus/console_libraries'
+#        - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-admin-api'
+#        - '--web.enable-lifecycle'
     networks:
       - metric
     volumes:
@@ -22,6 +26,17 @@ services:
     logging:
       options:
         tag: "admin"
+
+  alertmanager:
+    image: prom/alertmanager
+    volumes:
+      - /mnt/alertmanager:/etc/alertmanager/
+    ports:
+      - 9093:9093
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager.yml'
+#      - '--storage.path=/var/lib/alertmanager/data'
+#      - promotheus
 
   cadvisor:
     image: gcr.io/google-containers/cadvisor:latest
@@ -75,3 +90,15 @@ services:
     logging:
       options:
         tag: "admin"
+
+  mail:
+    image: bytemark/smtp
+    environment:
+      RELAY_HOST: smtp-relay.sendinblue.com
+      RELAY_PORT: 587
+      RELAY_USERNAME: USERNAME
+      RELAY_PASSWORD: PASSWORD
+#    logging:
+#      driver: syslog
+#      options:
+#        syslog-address: "tcp://logstash:5000"
